# smart-traffic-sensor

./: README.md
cfg/: .gitattributes  ssd300adam_1000_cambio_ancho_coco_120_inference.h5  trafficmonitor.cfg  trafficmonitor.glade  yolov3-voc.cfg  yolov3-voc_19000.weights  yolov3-voc_buena_calidad.weights
darknet/: CMakeLists.txt  README.md
darknet/DarknetAPI/: DarknetAPI.cpp  DarknetAPI.h
darknet/examples/: CMakeLists.txt  attention.c  cifar.c  rnn_vid.c  writing.c  yolo.c
darknet/include/: darknet.h
darknet/scripts/: gen_anchor.py  test.txt  train.txt  voc_label.py
darknet/src/: CMakeLists.txt  box.c  compare.c  demo.c  image.c  network.c  parser.c  region_layer.c  utils.c  yolo_layer.c
darknet/test/: CMakeLists.txt
docs/: _config.yml
docs/_data/: navigation.yml
docs/_pages/: block_diagram.md  description.md  home.md  installation.md
names/: label.names  label_tensorflow.names
src/: CMakeLists.txt  ClassType.h  ClassTypeGeneric.cpp  ClassTypeGeneric.h  Darknet_model.cpp  Darknet_model.h  blob.cpp  blob.h  classifier.cpp  classifier.h  cnn_model.cpp  cnn_model.h  coco.names  deep_learning_tracking.cpp  deep_learning_tracking.h  feature_tracking.cpp  feature_tracking.h  keras_model.cpp  keras_model.h  main.cpp  movement_model.cpp  movement_model.h  planar_geom.cpp  planar_geom.h  proximity_tracking.cpp  stats.cpp  tensorflow_model.cpp  tensorflow_model.h  trafficmonitor_algorithm.cpp  trafficmonitor_algorithm.h  trafficmonitor_config.cpp  trafficmonitor_config.h  vehicle.cpp  vehicle.h  vehicle_model.cpp  vehicle_model.h  view.cpp  viewgtk.cpp  viewgtk.h
src/include/tensorflow/cc/ops/: array_ops.h  math_ops.h  string_ops.h  string_ops_internal.h
src/python_modules/: keras_detect.py  tensorflow_detect.py
